2008-09-15  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test04_userStatsLookupBaseClass): Wrote test.
	(PokerUserStatsTestCase.test05_userStatsRankPercentileLookupBaseClass):
	Wrote test.
	(PokerUserStatsTestCase.test03_rankPercentileAccessor): Fixed bug
	with assertions related to sort.

	* pokernetwork/userstats.py (UserStatsAccessor.error): Added method.
	(UserStatsAccessor.getStatsValue): Restored strangely deleted method.
	(UserStatsAccessor._lookupValidStat): Restored strangely deleted method.
	(UserStatsLookup.getStatValue): Wrote method.
	(UserStatsLookup.__init__): Wrote method.
	(UserStatsRankPercentileLookup.__init__): Wrote method.
	(UserStatsLookup.allStatsAsPacket): Created stub for method.
	(UserStatsLookup.error): Wrote method.
	(UserStatsLookup.message): Wrore method.

2008-09-15  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* Makefile.am: add userstats.py to the distribution

	* tests/test-pokerservice.py.in: test18_cleanupTourneys_registering
	  must use regular tourneys for testing because sng are always
	  discarded

	* pokernetwork/pokerservice.py, tests/test-servercrash.py.in: fix
	  tournament cleanup (trash running tournaments or sng in
	  registering state)
	* pokernetwork/userstats.py: add message method class
	  UserStatsAccessor: for test purposes

2008-09-14  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-userstats.py.in (PokerUserStatsTestCase.MockTable):
	Created mock up.
	(PokerUserStatsTestCase.MockService): created mock up.
	(PokerUserStatsTestCase.MockAvatar): created mock up.

	* pokernetwork/userstats.py
	(UserStatsRankPercentileAccessor._lookupValidStat): Wrote method.

	* tests/test-userstats.py.in
	(PokerUserStatsTestCase.test02_factory): Fixed test to use
	Lookup class.

	* pokernetwork/userstats.py (UserStatsLookup): Created class.
	(UserStatsRankPercentileLookup): Created class.
	(UserStatsFactory.error): Added "Lookup" to end of required class
	string.
